--- a/app/src/main/res/layout/fragment_reunion.xml
+++ b/app/src/main/res/layout/fragment_reunion.xml
@@ -44,6 +44,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:maxLength="30"
         app:layout_constraintBottom_toBottomOf="@id/item_list_round"
         app:layout_constraintStart_toEndOf="@id/item_list_round"
         app:layout_constraintTop_toTopOf="@id/item_list_round"
