--- a/app/src/main/res/layout/activity_ajout_reunion.xml
+++ b/app/src/main/res/layout/activity_ajout_reunion.xml
@@ -12,8 +12,8 @@
         android:id="@+id/nomDeReunion"
         android:layout_width="175dp"
         android:layout_height="50dp"
-        android:layout_marginTop="352dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="209dp"
+        android:layout_marginBottom="22dp"
         android:hint="Nom"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -26,7 +26,8 @@
         android:id="@+id/date"
         android:layout_width="175dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="31dp"
+        android:layout_marginBottom="28dp"
+        android:focusableInTouchMode="false"
         android:hint="Select Date..."
         android:textSize="20sp"
         android:textStyle="bold"
@@ -39,24 +40,66 @@
         android:id="@+id/time"
         android:layout_width="175dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="33dp"
+        android:layout_marginBottom="18dp"
+        android:focusableInTouchMode="false"
         android:hint="Select Time..."
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/participants"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/date" />
+
+    <EditText
+        android:id="@+id/participants"
+        android:layout_width="175dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="15dp"
+        android:hint="Participants..."
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/id_participants"
+        app:layout_constraintEnd_toStartOf="@+id/button_participants"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/time" />
+
+    <Button
+        android:id="@+id/button_participants"
+        android:layout_width="175dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="499dp"
+        android:layout_marginEnd="34dp"
+        android:layout_marginBottom="86dp"
+        android:hint="Ajout"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/submitButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/participants"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/id_participants"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="21dp"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+        app:layout_constraintTop_toBottomOf="@+id/participants" />
 
     <Spinner
         android:id="@+id/salleSpinner"
         android:layout_width="175dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="21dp"
         app:layout_constraintBottom_toTopOf="@+id/date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nomDeReunion" />
 
@@ -64,7 +107,7 @@
         android:id="@+id/submitButton"
         android:layout_width="225dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="46dp"
         android:text="SUBMIT"
         android:textColor="#fff"
         android:textSize="20sp"
@@ -72,6 +115,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time" />
+        app:layout_constraintTop_toBottomOf="@+id/button_participants" />
 
 </android.support.constraint.ConstraintLayout>
