--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#1773B8</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#142850</color>
+    <color name="White">#ffffff</color>
 </resources>
