--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -7,5 +7,6 @@
         android:textColor="#ffffff"
         android:background="@color/colorPrimary"
         android:textSize="18dp"
+        android:textStyle="bold"
         android:padding="10dp"
     />
