--- a/app/src/main/res/layout/activity_ajout_reunion.xml
+++ b/app/src/main/res/layout/activity_ajout_reunion.xml
@@ -7,101 +7,164 @@
     android:layout_height="match_parent"
     tools:context="reunion_list.AjoutReunionActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="175dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="51dp"
+        android:text="Nom de la réunion"
+        android:textColor="@color/colorBlack"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/nomDeReunion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
     <EditText
         android:id="@+id/nomDeReunion"
         android:layout_width="175dp"
         android:layout_height="50dp"
-        android:layout_marginTop="209dp"
-        android:layout_marginBottom="22dp"
-        android:hint="Nom"
+        android:layout_marginBottom="26dp"
         android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/salleSpinner"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="175dp"
+        android:layout_height="30dp"
+        android:text="Date de la réunion"
+        android:textColor="@color/colorBlack"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/salleSpinner">
+
+    </TextView>
 
     <EditText
         android:id="@+id/date"
         android:layout_width="175dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="31dp"
         android:focusableInTouchMode="false"
-        android:hint="Select Date..."
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="185dp"
+        android:layout_height="30dp"
+        android:text="Heure de la réunion"
+        android:textColor="@color/colorBlack"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/salleSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/date">
+
+    </TextView>
 
     <EditText
         android:id="@+id/time"
-        android:layout_width="175dp"
+        android:layout_width="185dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="29dp"
         android:focusableInTouchMode="false"
-        android:hint="Select Time..."
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="175dp"
+        android:layout_height="30dp"
+        android:text="Participants"
+        android:textColor="@color/colorBlack"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/participants"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+        app:layout_constraintTop_toBottomOf="@+id/time">
+
+    </TextView>
 
     <EditText
         android:id="@+id/participants"
         android:layout_width="175dp"
         android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="15dp"
-        android:hint="Participants..."
+        android:layout_marginStart="13dp"
         android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/id_participants"
         app:layout_constraintEnd_toStartOf="@+id/button_participants"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
         android:id="@+id/button_participants"
-        android:layout_width="175dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="499dp"
-        android:layout_marginEnd="34dp"
-        android:layout_marginBottom="86dp"
-        android:hint="Ajout"
+        android:layout_width="160dp"
+        android:layout_height="47dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="56dp"
+        android:hint="Ajouter"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/participants"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/id_participants"
-        android:layout_width="300dp"
+        android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginBottom="14dp"
         android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/participants" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="175dp"
+        android:layout_height="30dp"
+        android:text="Salle de la réunion"
+        android:textColor="@color/colorBlack"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/salleSpinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nomDeReunion">
+
+    </TextView>
 
     <Spinner
         android:id="@+id/salleSpinner"
         android:layout_width="175dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="21dp"
-        app:layout_constraintBottom_toTopOf="@+id/date"
+        android:layout_marginBottom="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomDeReunion" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/submitButton"
@@ -115,6 +178,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_participants" />
+        app:layout_constraintTop_toBottomOf="@+id/id_participants" />
 
 </android.support.constraint.ConstraintLayout>
