--- a/app/src/main/res/layout/fragment_reunion_list.xml
+++ b/app/src/main/res/layout/fragment_reunion_list.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list_neighbours"
+    android:id="@+id/list_reunions"
     android:name="com.example.mareu.reunion_list.ReunionFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
