--- a/app/src/main/res/layout/activity_ajout_reunion.xml
+++ b/app/src/main/res/layout/activity_ajout_reunion.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<android.support.constraint.ConstraintLayout
+
     android:id="@+id/ajoutReunion"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -107,6 +111,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="13dp"
         android:textSize="20sp"
+        android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@+id/id_participants"
         app:layout_constraintEnd_toStartOf="@+id/button_participants"
         app:layout_constraintStart_toStartOf="parent"
@@ -181,3 +186,4 @@
         app:layout_constraintTop_toBottomOf="@+id/id_participants" />
 
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
