--- a/app/src/main/res/layout/activity_list_reunion.xml
+++ b/app/src/main/res/layout/activity_list_reunion.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<android.support.design.widget.CoordinatorLayout
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -87,4 +90,5 @@
         app:srcCompat="@drawable/ic_add_circle_black_24dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
+</ScrollView>
 
