--- a/app/src/main/res/layout/activity_list_reunion.xml
+++ b/app/src/main/res/layout/activity_list_reunion.xml
@@ -70,7 +70,8 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="632dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="34dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v4.view.ViewPager>
